need to fix overflow, overwrite bootstrap colors, finish the details on every page

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -8,3 +8,9 @@
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
 }
+
+.bg-success,
+.bg-primary { background-color: #49B583; }
+.bg-secondary { background-color: #FF4171; }
+.bg-tertiary { background-color: #FFBD69; }
+.bg-danger { background-color: #7F86FF; }
